--- a/views/layout.jade
+++ b/views/layout.jade
@@ -8,6 +8,7 @@ html
     title= path
     link(rel='stylesheet', href='css/master.css')
   body
+    include includes/_nav
     block content
 
   script(data-main="js/main", src="//cdnjs.cloudflare.com/ajax/libs/require.js/2.1.9/require.min.js")
