--- a/assets/css/master.styl
+++ b/assets/css/master.styl
@@ -1,13 +1,12 @@
 @import '_settings'
-
+@import '_nav'
 normalize-css()
 base()
+clearfix()
 
 body
-  padding: 50px
-
-.nav 
-	float: right
-.nav li
-	display: inline-block
-	margin: 0 12px;
+  background: lightgray
+  padding: 0;
+  
+.main
+	padding:24px
