--- a/layouts/layout.jade
+++ b/layouts/layout.jade
@@ -8,8 +8,7 @@ html
     title= path
     link(rel='stylesheet', href='css/master.css')
   body
-    include _nav
-
-    block content
+    include ../includes/_nav
+    block content.main
 
   script(data-main="js/main", src="//cdnjs.cloudflare.com/ajax/libs/require.js/2.1.9/require.min.js")
