--- a/views/_nav.jade
+++ b/views/_nav.jade
@@ -1,11 +1,16 @@
-ul.nav
-	li.brand
-		a(href='/') Plan Your Recovery
-	li
-		a(href='about') About Us
-	li
-		a(href='reflections') Reflections
-	li
-		a(href='stories') Stories
-	li
-		a(href='media') In The Media
+.nav
+	ul.nav-left
+		li.brand
+			a(href='/') Plan Your Recovery
+	ul.nav-right
+		li
+			a(href='qa') Questions &amp; Answers
+		li
+			a(href='stories') Stories
+		li
+			a(href='reflections') Reflections
+		li
+			a(href='media') In The Media
+		li
+			a(href='about') About Us
+
