--- a/layouts/layout.jade
+++ b/layouts/layout.jade
@@ -9,6 +9,7 @@ html
     link(rel='stylesheet', href='css/master.css')
   body
     include ../includes/_nav
-    block content.main
+
+    block content
 
   script(data-main="js/main", src="//cdnjs.cloudflare.com/ajax/libs/require.js/2.1.9/require.min.js")
