--- a/views/layout.jade
+++ b/views/layout.jade
@@ -10,6 +10,7 @@ html
   body
     include _nav
 
-    block content
+    div.main
+      block content
 
   script(data-main="js/main", src="//cdnjs.cloudflare.com/ajax/libs/require.js/2.1.9/require.min.js")
