--- a/views/reflections.jade
+++ b/views/reflections.jade
@@ -2,4 +2,11 @@ extends layout
 
 block content
   h3 Reflections
+
+  ul
+    - for post in contentful.posts
+      li
+        h4= post.title
+        p= post.body
+        
   
