--- a/views/_nav.jade
+++ b/views/_nav.jade
@@ -4,13 +4,13 @@
 			a(href='/') Plan Your Recovery
 	ul.nav-right
 		li
-			a(href='qa') Questions &amp; Answers
+			a(href='/qa') Questions &amp; Answers
 		li
-			a(href='stories') Stories
+			a(href='/stories') Stories
 		li
-			a(href='reflections') Reflections
+			a(href='/reflections') Reflections
 		li
-			a(href='media') In The Media
+			a(href='/media') In The Media
 		li
-			a(href='about') About Us
+			a(href='/about') About Us
 
