--- a/views/about.jade
+++ b/views/about.jade
@@ -1,5 +1,20 @@
 extends layout
 
 block content
-  h3 about us
-  
+  h3 A Labor of Love
+
+  :markdown
+    Plan Your Recovery is brought to you by Ned Presnall and Nick Niles, two family men working in their spare time to bring thoughtful information about addiction and recovery to a wider audience.
+    Here’s a little bit about us and our vision for this site…
+
+    Ned Presnall is Executive Director of Clayton Behavioral and Adjunct Professor at Washington University in St. Louis. He presents widely on the topics of addiction, mental health, and Medication Assisted Treatment. Ned is passionate about reducing the stigma against persons with addiction and against Medication Assisted Treatment though discourse and public engagement.
+    
+    Nick Niles is a filmmaker, musician and award-winning graphic designer living and working in Zürich, Switzerland. He studied in the Design & Technology masters program at Parsons School of Design in New York City, and received an MFA in Film Directing from Columbia University. During the day, he designs interactive educational applications for atfront. He’s passionate about helping people tell their stories.
+    Mission and Vision
+
+    The Mission of Plan Your Recovery, LLC is to engage the public and stimulate complex, unbiased thinking about addiction and recovery—thinking grounded in science and compassion. PlanYourRecovery, LLC is dedicated to reducing the stigmas against persons with addiction and against Medication Assisted Treatment, to expanding patient access to all evidence-based therapies, and to discovering new and more effective ways to support the process of recovery.
+    The Vision of Plan Your Recovery, LLC is a society in which persons with addiction receive nonjudgmental, supportive, ongoing and effective treatment grounded in science and compassion.
+    Training
+
+    Ned Presnall, LCSW provides trainings ranging from three hours to three days on Addiction and Medication Assisted Treatment. If you would like more information about the trainings available, please contact him at npresnall@planyourrecovery.com.
+      
