--- a/views/layout.jade
+++ b/views/layout.jade
@@ -6,11 +6,13 @@ html
     meta(name='description', content='description of your site')
     meta(name='author', content= "author of the site")
     title= path
-    link(rel='stylesheet', href='css/master.css')
+    link(rel='stylesheet', href='/css/master.css')
   body
     include _nav
 
     div.main
       block content
 
-  script(data-main="js/main", src="//cdnjs.cloudflare.com/ajax/libs/require.js/2.1.9/require.min.js")
+    include _footer
+
+  script(data-main="/js/main", src="//cdnjs.cloudflare.com/ajax/libs/require.js/2.1.9/require.min.js")
