tweak color settings

--- a/assets/css/_settings.styl
+++ b/assets/css/_settings.styl
@@ -39,6 +39,12 @@ default-color = blue
 // text highlight color
 highlight-color = blue
 
+// branding
+primary-color = blue
+secondary-color = lime
+tertiary-color = fuchsia
+dark-color = dark-gray
+
 // ligatures
 ligatures = false
 
